--- a/Platforming/Platforming/Platforming.vcxproj.filters
+++ b/Platforming/Platforming/Platforming.vcxproj.filters
@@ -113,9 +113,6 @@
     <ClInclude Include="InventorySlot.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ResourceManager.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Item.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -175,6 +172,9 @@
     </ClInclude>
     <ClInclude Include="CollidableEntity.h">
       <Filter>Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="ResourceManager.h">
+      <Filter>Engine</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
