--- a/Platforming/Platforming/Platforming.vcxproj.filters
+++ b/Platforming/Platforming/Platforming.vcxproj.filters
@@ -36,12 +36,6 @@
     <ClCompile Include="Inventory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="InventorySlot.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Item.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="ItemDatabase.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -96,6 +90,12 @@
     <ClCompile Include="CollidableEntity.cpp">
       <Filter>Entities</Filter>
     </ClCompile>
+    <ClCompile Include="InventorySlot.cpp">
+      <Filter>Entities</Filter>
+    </ClCompile>
+    <ClCompile Include="Item.cpp">
+      <Filter>Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MapGenerator.h">
@@ -108,12 +108,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Inventory.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="InventorySlot.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Item.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ItemDatabase.h">
@@ -175,6 +169,15 @@
     </ClInclude>
     <ClInclude Include="ResourceManager.h">
       <Filter>Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="InventorySlot.h">
+      <Filter>Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="Item.h">
+      <Filter>Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="Equipment.h">
+      <Filter>Entities</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
